--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>xiaoxing</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>xiaoxing</name>
-    <description>xiao xing hua qian opc</description>
+    <description>xiao xing hua xian opc</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
