--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <!--influxDB-->
         <dependency>
             <groupId>com.github.miwurster</groupId>
             <artifactId>spring-data-influxdb</artifactId>
             <version>1.8</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>2.2.4</version>
         </dependency>
         <!--utgard -->
         <dependency>
